[package]
name = "first-rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
uuid = "1.6.1"
serde = "1.0.195"
serde_json = "1.0.111"
mongo-lock-async = "0.3.0"
tokio = { version = "1.35.1", features = ["full"]}
log = "0.4.20"
simple_logger = "4.3.3"